--- a/ex001.html
+++ b/ex001.html
@@ -20,9 +20,9 @@
     <p>Já me livrei da maldição!</p>
 
     <script>
-      window.alert('minha primeira mensagem')
-      window.confirm('Está gostando de JS?')
-      window.prompt('Qual é seu nome?')
+      window.alert('minha primeira mensagem') //Janela com botão ok
+      window.confirm('Está gostando de JS?') //Janela com botão ok e cancel
+      window.prompt('Qual é seu nome?') //Vai perguntar o nome
     </script>
   </body>
 </html>
